# fatherbox

./: .env  .env.analyze  .env.development  .env.docker  .prettierignore  .stylelintignore  LICENSE  README.md  fatherbox.code-workspace  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vben-admin.code-workspace  vite.config.ts
.github/: CODEOWNERS  contributing.md  release-drafter.yml
.github/ISSUE_TEMPLATE/: bug-report.yml  docs.yml  feature-request.yml
.github/workflows/: build.yml  ci.yml  codeql.yml  draft.yml  issue-close-require.yml  issue-labeled.yml  publish.yml  release.yml  semantic-pull-request.yml  stale.yml
.husky/: pre-commit
apps/backend-mock/utils/: mock-data.ts
apps/fb-web/: .env  .env.analyze  .env.development  .env.production  package.json
apps/fb-web/src/: app.vue  preferences.ts
apps/fb-web/src/api/core/: ai-source.ts  ai.ts  auth.ts  chat.ts  file.ts  index.ts  user.ts  workspace.ts
apps/fb-web/src/components/chat/: index.vue  useScroll.ts
apps/fb-web/src/components/file/: DirTree.vue  FileOperate.vue  FileTable.vue  FileTree.vue  ImageView.vue  LocalUpload.vue  TextView.vue  file-operate.vue  file.ts
apps/fb-web/src/components/flow/: Diagram.vue  DiagramSidebar.vue  DiagramToolbar.vue  PropertyPanel.vue
apps/fb-web/src/components/markdown/: cherry.vue
apps/fb-web/src/components/workspace/: workspace.vue
apps/fb-web/src/layouts/: auth.vue  basic.vue
apps/fb-web/src/locales/langs/: en-US.json  zh-CN.json
apps/fb-web/src/router/: guard.ts
apps/fb-web/src/store/: auth.ts  index.ts  workspace.ts
apps/fb-web/src/types/: index.ts  workspace.ts
apps/fb-web/src/utils/: dataUtil.ts  index.ts
apps/fb-web/src/utils/file/: base64util.ts
apps/web-antd/: .env  package.json
apps/web-antd/src/api/core/: auth.ts  user.ts
apps/web-antd/src/layouts/: basic.vue
apps/web-antd/src/locales/langs/: en-US.json
apps/web-antd/src/utils/: index.ts
apps/web-antd/src/utils/file/: base64util.ts  downloadUtil.ts
internal/vite-config/src/plugins/: license.ts
scripts/vsh/src/code-workspace/: index.ts
src-tauri/: Cargo.toml  ReadMe.md  config.toml  rustfmt.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: api.rs  db_utils.rs  file_command.rs  lib.rs  main.rs  model_command.rs  route.rs  stream.rs  user_command.rs  workspace_command.rs
src-tauri/src/adapter/: mod.rs  user_adapter.rs
src-tauri/src/api/: auth.rs  file.rs  mod.rs
src-tauri/src/dao/: ai_model_dao.rs  ai_source_dao.rs  file_dao.rs  mod.rs  setting_dao.rs  user_dao.rs  workspace_dao.rs
src-tauri/src/dto/: ai_model.rs  ai_source.rs  chat.rs  file.rs  file_dto.rs  mod.rs  setting_dto.rs
src-tauri/src/entity/: ai_model.rs  ai_source.rs  file.rs  mod.rs  prelude.rs  setting.rs  user.rs  workspace.rs
src-tauri/src/service/: ai_chat_service.rs  ai_model_service.rs  ai_source_service.rs  chat_service.rs  file_service.rs  mod.rs  model_service.rs  setting_service.rs  user_service.rs  workspace_service.rs  zone_service.rs
src-tauri/src/util/: db_util.rs  mod.rs
src/api/ollama/: model.ts
src/api/ollama/model/: model.ts
src/api/sys/: upload.ts
src/api/sys/model/: WorkspaceModel.ts  fileModel.ts
src/components/Form/src/: componentMap.ts
src/components/Form/src/types/: index.ts
src/components/ImageEditor/: ImageEditor.vue
src/components/Markdown/src/: Markdown.vue
src/components/Upload/: index.ts
src/components/Upload/src/: LocalUpload.vue
src/enums/: cacheEnum.ts
src/layouts/default/header/: index.vue
src/router/routes/modules/: editor.ts  file-manager.ts  model.ts  tool.ts
src/settings/: projectSetting.ts
src/store/modules/: workspace.ts
src/utils/cache/: persistent.ts
src/views/editor/json/: index.vue
src/views/editor/markdown/: index.vue
src/views/editor/rich-text/: index.vue
src/views/file-manager/: DirModal.vue  DirTree.vue  FileModal.vue  file.data.ts  index.vue
src/views/file-manager/cloud/: index.vue
src/views/model/doubao/: index.vue
src/views/model/ollama/: index.vue
src/views/model/remote/: index.vue
src/views/tool/encryptor/: index.vue
src/views/tool/image-editor/: index.vue
src/views/tool/json-formatter/: index.vue
src/views/tool/time-parser/: index.vue
src/views/tool/uuid-generator/: index.vue
types/: store.d.ts
(+192 files in other folders)
