[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.6.1", features = [ "path-all", "http-all", "fs-all", "dialog-all"] }
tokio = { version = "1.38.0", features = ["full"] }
axum = {version = "0.7.5", features = ["multipart"] }
log = "0.4.21"
config = "0.14.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
thiserror = "1.0.60"
clap = {version = "4.4.18", features = ["derive"] }
anyhow = "1.0.82"
futures = "0.3.30"
tokio-util = "0.7.11"
tower-http = { version = "0.5.2", features = ["cors"] }
http-body-util = "0.1.1"
axum-macros = "0.4.1"
sea-orm = { version = "1.0.0-rc.7", features = [
    "debug-print",
    "runtime-tokio-native-tls",
     "sqlx-sqlite",
] }
uuid = { version = "1.8.0", features = ["v4"] }
chrono = "0.4.38"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
